cmd/css/question.css
:root {
    --background: #002b36;
    --highlight: #073642;
    --comment: #586e75;
    --content: #839496;
    --emphasis: #93a1a1;
}

html, body, div, p, a, button {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

html {
    background-color: var(--background);
    color: var(--foreground);
    font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
    font-size: clamp(var(--min), var(--val), var(--max));
    --max: 2.5em;
    --min: 1em;
    --val: 2.5vw;
    padding-top: 2rem;
    text-align: center;
    touch-action: manipulation;
}

a {
    all: unset;
}

#hint {
    color: var(--emphasis);
    font-size: .75em;
    user-select: none;
}

#dark-mode {
    cursor: pointer;
    font-size: .5em;
    position: absolute;
    right: .5em;
    top: .5em;
    user-select: none;
}

.footer {
    bottom: 0;
    color: var(--background);
    left: 0;
    padding-top: 2rem;
    padding-bottom: 2rem;
    position: fixed;
    text-align: center;
    user-select: none;
    width: 100%;
}

#question {
    cursor: pointer;
    line-height: 1.4;
    margin-left: auto;
    margin-right: auto;
    max-width: 80%;
    padding-top: 2rem;
    padding-bottom: 2rem;
}

#answer {
    display: none;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    max-width: 80%;
    outline: ridge;
    padding: 50px 0;
    text-align: center;
    width: 100%;
}

#toggle { 
    appearance: none;
    border-radius: 4px;
    box-sizing: border-box;
    cursor: pointer;
    display: inline-block;
    font-size: inherit;
    font-weight: 500;
    padding: 6px 16px;
    position: relative;
    transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
    user-select: none;
    vertical-align: middle;
    -webkit-user-select: none;
    word-wrap: break-word;
}

